Add ffmpeg screen recording

--- a/etc/supervisor/conf.d/selenium.conf
+++ b/etc/supervisor/conf.d/selenium.conf
@@ -5,5 +5,4 @@ user=selenium
 directory=/home/selenium
 environment=HOME="/home/selenium"
 redirect_stderr=true
-stdout_logfile_backups=2
-stdout_logfile_maxbytes=10MB
+stdout_logfile=/logs/chrome/selenium.log
