--- a/etc/supervisor/conf.d/ffmpeg.conf
+++ b/etc/supervisor/conf.d/ffmpeg.conf
@@ -1,5 +1,5 @@
 [program:ffmpeg]
-command=/usr/bin/ffmpeg -f x11grab -s 2000x2000 -i %(ENV_DISPLAY)s -r 25 -c:v libx264 /logs/chrome/screen.mp4
+command=/usr/bin/ffmpeg -f x11grab -s %(ENV_SCREEN_RESOLUTION)s -i %(ENV_DISPLAY)s -r 25 -c:v libx264 /logs/chrome/screen.mp4
 user=selenium
 priority=5
 redirect_stderr=true
