--- a/etc/supervisor/conf.d/xvfb.conf
+++ b/etc/supervisor/conf.d/xvfb.conf
@@ -1,5 +1,5 @@
 [program:xvfb]
-command=/usr/bin/Xvfb %(ENV_DISPLAY)s -screen 0 %(ENV_SCREEN_GEOMETRY)s -ac
+command=/usr/bin/Xvfb %(ENV_DISPLAY)s -screen 0 %(ENV_SCREEN_RESOLUTION)sx24 -ac
 priority=0
 redirect_stderr=true
 stdout_logfile_backups=2
