Switch ffmpeg output format to mkv

--- a/etc/supervisor/conf.d/ffmpeg.conf
+++ b/etc/supervisor/conf.d/ffmpeg.conf
@@ -1,5 +1,5 @@
 [program:ffmpeg]
-command=/bin/bash -c 'sleep 10 && exec /usr/bin/ffmpeg -y -f x11grab -s %(ENV_SCREEN_RESOLUTION)s -i %(ENV_DISPLAY)s -r 25 -c:v libx264 /logs/chrome/screen.mp4'
+command=/bin/bash -c 'sleep 10 && exec /usr/bin/ffmpeg -y -f x11grab -s %(ENV_SCREEN_RESOLUTION)s -i %(ENV_DISPLAY)s -r 15 -vcodec libx264 -crf 25 -profile:v high -preset veryfast -pix_fmt yuv420p /logs/chrome/screen.mkv'
 user=selenium
 priority=5
 redirect_stderr=true
