--- a/etc/supervisor/conf.d/ffmpeg.conf
+++ b/etc/supervisor/conf.d/ffmpeg.conf
@@ -1,7 +1,8 @@
 [program:ffmpeg]
-command=/bin/bash -c 'sleep 10 && exec /usr/bin/ffmpeg -y -f x11grab -s %(ENV_SCREEN_RESOLUTION)s -i %(ENV_DISPLAY)s -r 15 -vcodec libx264 -crf 25 -profile:v high -preset veryfast -pix_fmt yuv420p /logs/chrome/screen.mkv'
+command=/usr/local/bin/ffmpeg.sh
 user=selenium
 priority=5
 redirect_stderr=true
 stdout_logfile_backups=2
 stdout_logfile_maxbytes=10MB
+autorestart=unexpected
